# enthropic

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  codeql.yml  dependabot.yml
apps/auth-service/: package.json
apps/auth-service/prisma/: schema.prisma
apps/auth-service/src/: app.module.ts  main.ts
apps/auth-service/src/auth/: auth.controller.ts  auth.dto.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  permissions.guard.ts
apps/auth-service/src/config/: config.service.ts
apps/auth-service/src/health/: health.controller.ts
apps/auth-service/src/users/: users.controller.ts  users.service.ts
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx
apps/dashboard/src/components/: AdminPanel.tsx  Login.tsx  MarketDataPanel.tsx  (+5 more)
apps/execution-core/: Cargo.toml  build.rs
apps/execution-core/benches/: order_processing.rs
apps/execution-core/src/: config.rs  main.rs
apps/execution-core/src/auth/: mod.rs
apps/execution-core/src/engine/: mod.rs  order_processor.rs  position_keeper.rs
apps/execution-core/src/nats_handler/: mod.rs  subscriber.rs
apps/execution-core/src/observability/: health.rs  metrics.rs  mod.rs  tracing_setup.rs
apps/execution-core/src/proto/: mod.rs
apps/execution-core/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs
apps/execution-core/tests/: integration_test.rs  order_processor_test.rs  order_processor_tests.rs  position_keeper_test.rs  position_keeper_tests.rs
apps/nats-gateway/: index.ts  package.json
apps/nats-gateway/services/: market-simulator.service.ts  order-handler.services.ts
apps/nats-gateway/src/: auth.ts  config.ts  index.ts  main.ts  websocket-handler.ts
apps/risk-service/: package.json
apps/risk-service/prisma/: schema.prisma
apps/risk-service/src/: app.module.ts  main.ts
apps/risk-service/test/: auth.service.spec.ts  risk.service.spec.ts
apps/strategy-service/: pyproject.toml
apps/strategy-service/src/: __init__.py  auth.py  config.py  main.py  models.py  nats_client.py
apps/strategy-service/src/observability/: __init__.py  logging.py  metrics.py  tracing.py
apps/strategy-service/src/resilience/: __init__.py  circuit_breaker.py  retry.py
apps/strategy-service/src/strategies/: __init__.py  momentum.py
apps/strategy-service/tests/: __init__.py  conftest.py  test_auth.py  test_circuit_breaker.py  test_momentum.py  test_momentum_strategy.py  test_vwap.py
docs/: AUTH.md  DEPLOYMENT.md  OBSERVABILITY.md
infra/db/init/: 01_extensions.sql  02_schema.sql  03_trading_tables.sql
infra/docker/: auth-service.Dockerfile  dashboard.Dockerfile  execution-core.Dockerfile  nats-gateway.Dockerfile  risk-service.Dockerfile  strategy-service.Dockerfile
infra/grafana/dashboards/: trading-platform.json
infra/kubernetes/external-secrets/: enthropic-secrets.yaml  vault-secretstore.yaml
infra/kubernetes/vault/: vault-tokenreview-rbac.yaml
infra/monitoring/: alerts.yml  otel-collector.yml  prometheus.yml
infra/prometheus/: prometheus.yml
libs/shared/domain/: package.json
libs/shared/proto/: README.md  generate.sh
libs/shared/vwap/: pyproject.toml
prisma/: seed.js
proto/: common.proto  execution.proto  market.proto  orders.proto  positions.proto
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: auth.spec.ts  trading.spec.ts
tests/load/: locust.conf  locustfile.py  requirements.txt
tools/scripts/: deploy-dockerfiles.sh  generate-protos.sh  run-all.sh  setup-dev.sh
(+49 files in other folders)
