[package]
name = "execution-core"
version = "1.0.0"
edition = "2021"
description = "High-performance trading execution engine with observability"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# NATS messaging
async-nats = "0.33"

# Database - IMPORTANT: enable all needed features
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros"
] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Numeric types - with maths feature for signum
rust_decimal = { version = "1.33", features = ["serde", "maths"] }
rust_decimal_macros = "1.33"

# Core utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Protocol buffers
prost = "0.12"
futures = "0.3"

# Phase 3: Observability - Updated for compatibility
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "tonic"] }
prometheus = "0.13"
once_cell = "1.19"

# HTTP server for metrics/health
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
# Phase 4: Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2.9", features = ["derive"] }

# Benchmark is only available locally, not in Docker
# To run benchmarks: cargo bench
# [[bench]]
# name = "order_processing"
# harness = false

[build-dependencies]
prost-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true